--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
 }
 .carousel-cell {
   background-color: #888;
   width: 100%;
   height: 100vh;
   display: block;
+  padding: 1em 2em;
 }
 .affectiva {
   position: absolute;
@@ -16,9 +22,16 @@ body {
   display: flex;
 }
 .affectiva > * {
-  background-color: gray;
+  background-color: green;
   max-width: 320px;
   max-height: 240px;
   font-size: 10px;
   margin: 0 10px;
+}
+.center {
+  display: block;
+  margin: 0 auto;
+}
+.slide-header {
+  text-align: center;
 }
