--- a/style.css
+++ b/style.css
@@ -5,11 +5,24 @@ body {
   margin: 0;
   font-family: "Ubuntu", sans-serif;
   font-size: 20px;
+  background-color: #333;
+}
+.carousel-container {
+  width: 1000px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.carousel {
+  max-width: 1000px;
+  max-height: 700px;
 }
 .carousel-cell {
-  background-color: #888;
+  background-color: #ccc;
   width: 100%;
   height: 100vh;
+  max-height: 700px;
   display: block;
   padding: 1em 2em;
 }
@@ -22,11 +35,21 @@ body {
   display: flex;
 }
 .affectiva > * {
-  background-color: green;
-  max-width: 320px;
-  max-height: 240px;
+  background-color: rgba(250,250,250,0.9);
+  height: 260px;
   font-size: 10px;
   margin: 0 10px;
+  padding: 8px 10px;
+  border-radius: 4px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.4);
+}
+.buttons {
+  margin-bottom: 15px;
+}
+.buttons > button {
+  width: 100%;
+  display: block;
+  font-size: 1.4em;
 }
 .center {
   display: block;
@@ -34,4 +57,17 @@ body {
 }
 .slide-header {
   text-align: center;
+}
+.video {
+  width: 340px;
+}
+.video > video {
+  width: 320px;
+  height: 240px;
+}
+.em-results {
+  width: 300px;
+}
+.em-logs {
+  width: 180px;
 }
