--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face{
+    font-family: 'emoji';
+    src: url('lib/emojione.woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -70,4 +77,9 @@ body {
 }
 .em-logs {
   width: 180px;
+}
+.big-emoji {
+  font-size: 480px;
+  text-align: center;
+  font-family: "emoji";
 }
