--- a/style.css
+++ b/style.css
@@ -35,13 +35,18 @@ body {
 }
 .affectiva {
   position: absolute;
-  right: 10px;
-  bottom: 10px;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
   z-index: 10000;
+  width: 100%;
 
   display: flex;
+  justify-content: space-between;
 }
-.affectiva > * {
+.affectiva > .video,
+.em-logs,
+.em-results {
   background-color: rgba(250,250,250,0.9);
   height: 260px;
   font-size: 10px;
@@ -49,7 +54,15 @@ body {
   padding: 8px 10px;
   border-radius: 4px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.4);
+  justify-content: flex-end;
 }
+.affectiva > .video {
+
+}
+.affectiva > .right {
+  display: flex;
+}
+
 .buttons {
   margin-bottom: 15px;
 }
